	being an instance of Storable.

	* Makefile.am: build support for the new modules.

	* mk/common.mk: make .hsc -> .hs transform work with ghc 6.2

2005-04-18 Duncan Coutts <duncan@coutts.uklinux.net>

	* tools/apiGen/Makefile: re-do the makefile so it scales to more
	packages and add lots more packages. Not all of these will build yet
	as it requires a few more code gen fixes.

	* tools/apiGen/gtk-sources.xml, tools/apiGen/gnomecanvas-sources.xml,
	tools/apiGen/glade-sources.xml, tools/apiGen/glade-sources.xml,
	tools/apiGen/gdk-sources.xml: update the source spec files to reflect
	slightly changed dir names.

	* tools/apiGen/gconf-sources.xml, tools/apiGen/gda-sources.xml,
	tools/apiGen/gnomedb-sources.xml, tools/apiGen/gnome-sources.xml,
	tools/apiGen/gnomeui-sources.xml, tools/apiGen/gnomeprint-sources.xml,
	tools/apiGen/gnomeprintui-sources.xml,
	tools/apiGen/gnomevfs-sources.xml, tools/apiGen/gtkhtml2-sources.xml,
	tools/apiGen/gtkhtml3-sources.xml, tools/apiGen/sourceview-sources.xml,
	tools/apiGen/vte-sources.xml: add a bunch of new source spec files.

	* tools/apiGen/CodeGen.hs: make it a warning rather than an error for
	an object to not inherit from GObject.

	* tools/apiGen/Docs.hs: be more liberal in parsing nested paragraphs.

2005-04-15 Duncan Coutts <duncan@coutts.uklinux.net>

	* tools/apiGen/Api.hs, tools/apiGen/ApiGen.hs,
	tools/apiGen/CodeGen.hs: also extract info for boxed objects and
	generate (partial) binding modules.

2005-04-14 Duncan Coutts <duncan@coutts.uklinux.net>

	* tools/apiGen/Api.hs: extract information about classes. Basically
	just consist of methods.

	* tools/apiGen/ApiGen.hs: generate bindig modules for classes. Fix doc
	identifier to module name mapping so we can specify it manually when
	it doesn't match up right. Fix rcs annoyance.

	* tools/apiGen/CodeGen.hs: add code for converting a class to a basic
	object so we can generate code for classes. Add classes into the type